--- a/restaurant/templates/index.html
+++ b/restaurant/templates/index.html
@@ -34,7 +34,42 @@
     </article>
     <article>
       <h2>Opening Hours</h2>
-      <img src="{% static 'img/head_chef.jpg' %}">
+      <img src="{% static 'img/grilled fish B.jpg' %}">
+      <p>
+        The Little Lemon Restaurant is open 7 days a week, except for public holidays. 
+      </p>
+      <ul>
+        <li>Mon - Fri: 2pm - 10pm</li>
+        <li>Sat: 2pm - 11pm</li>
+        <li>Sun: 2pm - 9pm</li>
+      </ul>
+    </article>
+  </section>
+
+  <section>
+    <article>
+      <h2>Our New Menu</h2>
+      <img src="{% static 'img/pasta.jpg' %}">
+      <p>
+        Our menu consists of 12-15 seasonal items based on Italian, Greek, and Turkish culture.
+      </p>
+      <p>
+        <a href="{% url 'menu' %}">See our new menu</a>
+      </p>
+    </article>
+    <article>
+      <h2>Chefs</h2>
+      <img src="{% static 'img/mario and adrian b.jpg' %}">
+      <p>
+        Get experience with our expert chefs. Join now !
+      </p>
+      <p>
+        <a href="{% url 'book' %}">Book your table now</a>
+      </p>
+    </article>
+    <article>
+      <h2>Opening Hours</h2>
+      <img src="{% static 'img/restaurant chef C.jpg' %}">
       <p>
         The Little Lemon Restaurant is open 7 days a week, except for public holidays. 
       </p>
